# python-library-template

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  install_dependencies.sh  pyproject.toml  requirements.txt  setup.py
src/my_data_toolkit/: cli.py  preprocessing.py
tests/: test_preprocessing.py
