[tool.poetry]
name = "my_toolkit"
version = "0.1.0"
description = "A template for supporting data science projects"
authors = ["Gordon Silvera"]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^1.5"
numpy = "^1.22"
scikit-learn = "^1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
