[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-toolkit"
version = "0.1.0"
description = "A sample package"
authors = [
  { name="Gordon Silvera", email="gordon@thedatastrategist.com" }
  ]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "scikit-learn",
]
