[tool.poetry]
name = "my_data_toolkit"
version = "0.1.0"
description = "Reusable tools for data analysis"
authors = ["Gordon Silvera <gordon@thedatastrategist.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "my_data_toolkit", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.0"
numpy = "^1.24"
scikit-learn = "^1.3"
matplotlib = "^3.8"
seaborn = "^0.12"
jupyterlab = "^4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
isort = "^5.13"
mypy = "^1.8"
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-v"

[tool.poetry.scripts]
data_toolkit = "my_data_toolkit.cli:app"
